--- a/htdocs/duq/fillintheblankperl.html
+++ b/htdocs/duq/fillintheblankperl.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="js/ProblemEditing.js"></script>
 <script type="text/javascript" src="js/HintEditor.js"></script> 
 <script type="text/javascript" src="js/toleranceEditor.js"></script> 
+<script type="text/javascript" src="js/FindRand.js"></script> 
 <link rel="stylesheet" type="text/css" src="tooltips.css">
 
 <title>Fill in the Blanks</title> 
@@ -253,8 +254,10 @@ function generatePerl()
 	}
 
 	var output = document.getElementById("codeOutput"); 
-	output.innerHTML = "All the Perl code is : <span id='code'>"  + pgString + "</span>";
-	
+	if(findRand(pgString) == false)	
+		output.innerHTML = "All the Perl code is : <span id='code'>"  + pgString + "</span>";
+	else	
+		alert("Random tags (\"[rand]...[/rand]\") detected. Problem generation halted.");
 	// Save the state and make the updates in WebWorK
 	saveState();
 }
