--- a/htdocs/duq/truefalseperl.html
+++ b/htdocs/duq/truefalseperl.html
@@ -280,16 +280,23 @@ function generatePerl()
 	<legend> Enter a hint below: </legend> 
 
 	<p>Enter text here:</p>
-	<textarea id ="hintText" class="DuqWorkSave tooltip" rows = "5" cols = "50"><span class="tooltiptext">This is what the student will see when they click on "Need Help".</span></textarea>
+	<div class="tooltip">
+		<span class="tooltiptext">This is what the student will see when they click on "Need Help".</span>
+		<textarea id ="hintText" class="DuqWorkSave" rows = "5" cols = "50"></textarea>
+	</div>
 	<br>
- 
 	<p>Enter a URL for an externally hosted image here:<br>(Default size is 500x500)</p>
-	<textarea id ="imageHintText" class="DuqWorkSave tooltip" rows = "5" cols = "50"><span class="tooltiptext">This is the image that appears when the student clicks on "Need Help".</span></textarea>
-	<textarea id = "imageHintWidth" class="DuqWorkSave tooltip" placeholder = "width" rows = "1" cols = "7"><span class="tooltiptext">This is the width of the image in pixels.</span></textarea>
-	<textarea id = "imageHintHeight" class="DuqWorkSave tooltip" placeholder = "height" rows = "1" cols = "7"><span class="tooltiptext">This is the height of the image in pixels.</span></textarea>
+	<div class="tooltip">
+		<span class="tooltiptext">This is the image that appears when the student clicks on "Need Help". Height and width are represented in pixels.</span>
+		<textarea id ="imageHintText" class="DuqWorkSave" rows = "5" cols = "50"></textarea>
+		<textarea id = "imageHintWidth" class="DuqWorkSave" placeholder = "width" rows = "1" cols = "7"></textarea>
+		<textarea id = "imageHintHeight" class="DuqWorkSave" placeholder = "height" rows = "1" cols = "7"></textarea>
+	</div>
 	<br> 
-
-	<button class = "button tooltip" onclick = "sendHint()">Hint preview<span class="tooltiptext">This will allow you to preview the hint.</span></button>
+	<div class="tooltip">
+		<span class="tooltiptext">This will allow you to preview the hint.</span>
+		<button class = "button" onclick = "sendHint()">Hint preview</button>
+	</div>
 	<p> Hint Preview </p>  
 	<div id = "outputHint"> 
 	</div> 
@@ -301,11 +308,17 @@ function generatePerl()
 	<legend> Enter a URL for an externally hosted image to show in problem below: 
 		<br>(Default size is 500x500)
 	</legend> 
-	<textarea id ="imageText" class="DuqWorkSave tooltip" rows = "5" cols = "50"><span class="tooltiptext">This is the image that the student will see inside of the problem.</span></textarea>
-	<textarea id = "imageWidth" class="DuqWorkSave tooltip" placeholder = "width" rows = "1" cols = "7"><span class="tooltiptext">This is the width of the image in pixels.</span></textarea>
-	<textarea id = "imageHeight" class="DuqWorkSave tooltip" placeholder = "height" rows = "1" cols = "7"><span class="tooltiptext">This is the height of the image in pixels.</span></textarea>
+	<div class="tooltip">
+		<span class="tooltiptext">This is the image that the student will see inside of the problem.</span>
+		<textarea id ="imageText" class="DuqWorkSave" rows = "5" cols = "50"></textarea>
+		<textarea id = "imageWidth" class="DuqWorkSave" placeholder = "width" rows = "1" cols = "7"></textarea>
+		<textarea id = "imageHeight" class="DuqWorkSave" placeholder = "height" rows = "1" cols = "7"></textarea>
+	</div>
 	<br> 
-	<button class = "button tooltip" onclick = "sendImage()">Image preview<span class="tooltiptext">This will allow you to preview the image.</span></button>
+	<div class="tooltip">
+		<span class="tooltiptext">This will allow you to preview the image.</span>
+		<button class = "button" onclick = "sendImage()">Image preview</button>
+	</div>
 	<p> Image Preview </p>  
 	<div id = "outputImage"> 
 	</div> 
