Tooltip bug and UI fix

--- a/htdocs/duq/fillintheblankperl.html
+++ b/htdocs/duq/fillintheblankperl.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="js/HintEditor.js"></script> 
 <script type="text/javascript" src="js/toleranceEditor.js"></script> 
 <script type="text/javascript" src="js/FindRand.js"></script> 
-<link rel="stylesheet" type="text/css" src="tooltips.css">
+<link rel="stylesheet" type="text/css" href="tooltips.css">
 
 <title>Fill in the Blanks</title> 
 <style>
