--- a/htdocs/duq/truefalseperl.html
+++ b/htdocs/duq/truefalseperl.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="js/ProblemEditing.js"></script>
 <script type="text/javascript" src="js/HintEditor.js"></script>
 <script type="text/javascript" src="js/FindRand.js"></script>
-<link rel="stylesheet" type="text/css" src="tooltips.css">
+<link rel="stylesheet" type="text/css" href="tooltips.css">
 
 <title> True False </title> 
 
