Integrate '$' literals instead of "\(" and "\)" in JavaScript
Allows the user to input $ instead of using \

--- a/htdocs/duq/fillintheblankperl.html
+++ b/htdocs/duq/fillintheblankperl.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="js/ProblemEditing.js"></script>
 <script type="text/javascript" src="js/HintEditor.js"></script> 
 <script type="text/javascript" src="js/toleranceEditor.js"></script> 
+<script type="text/javascript" src="js/problemSyntaxSimplification.js"></script> 
 
 <title>Fill in the Blanks</title> 
 <style>
@@ -69,9 +70,11 @@ function sendQuestion()
 	if(question == "") 
 	{
 		alert("Ooops! You left the question blank. Please try again"); 
-	} 
+	}
+    
+	question = checkDollarSigns("question");//calls the function to check for $ in the input
 	var output = document.getElementById("outputQues"); 
-	output.innerHTML = "You asked : " +question; 
+	output.innerHTML = "You asked : " + question; 
 }
 
 function sendAnswer() 
@@ -81,6 +84,8 @@ function sendAnswer()
 	{
 		alert("Ooops! You left the answer blank. Please try again"); 
 	} 
+	
+	answer = checkDollarSigns("answer");
 	var output = document.getElementById("outputAns"); 
 	output.innerHTML = "You answered : " +answer; 
 }
@@ -165,8 +170,10 @@ function getSelectedType(){
 function generatePerl()
 {
 	addKnowlHelper();
-	var question = document.getElementById("knowlOutput").innerHTML;
+	var question = checkDollarSigns("question");
+	document.getElementById("knowlOutput").innerHTML = question;
 	var answer = document.getElementById("answer").value;
+	answer = checkDollarSigns("answer");
 	var solution = document.getElementById("solution").value;
 
 	var section1 = '<br><br>DOCUMENT();\n<br>\
