--- a/htdocs/duq/truefalseperl.html
+++ b/htdocs/duq/truefalseperl.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="js/insertKnowl.js"></script>
 <script type="text/javascript" src="js/ProblemEditing.js"></script>
 <script type="text/javascript" src="js/HintEditor.js"></script>
+<script type="text/javascript" src="js/problemSyntaxSimplification.js"></script> 
 
 <title> True False </title> 
 
@@ -65,7 +66,7 @@ button
 
 function sendQuestion() 
 {
-	addKnowlHelper();
+	//addKnowlHelper();
 	var question = document.getElementById("question").value; 
 	if(question == "") 
 	{
@@ -74,6 +75,7 @@ function sendQuestion()
 	else
 	{
 		var output = document.getElementById("outputQues"); 
+		question = checkDollarSigns("question");
 		output.innerHTML = "You asked : " +question; 
 	}
 }
@@ -141,7 +143,8 @@ function sendHint(){
 function generatePerl()
 {
 	addKnowlHelper();
-	var question = document.getElementById("knowlOutput").innerHTML;
+	var question = checkDollarSigns("question");
+	document.getElementById("knowlOutput").innerHTML = question;
 	//team B
 	//don't worry about this. knowlOutput return the same thing as question
 	//if there is not a knowl and return the string question with knowl if there is
