--- a/htdocs/duq/fillintheblankperl.html
+++ b/htdocs/duq/fillintheblankperl.html
@@ -2,13 +2,6 @@
 <html>
 <head>
 
-<script type="text/javascript" src="../js/jquery.js"></script>
-<script type="text/javascript" src="js/insertKnowl.js"></script>
-<script type="text/javascript" src="js/ProblemEditing.js"></script>
-<script type="text/javascript" src="js/HintEditor.js"></script> 
-<script type="text/javascript" src="js/toleranceEditor.js"></script> 
-<script type="text/javascript" src="js/FindRand.js"></script> 
-<script type="text/javascript" src="js/InsertIntoPG.js"></script>
 <link rel="stylesheet" type="text/css" href="tooltips.css">
 
 <title>Fill in the Blanks</title> 
@@ -67,14 +60,15 @@ button
 
 function sendQuestion() 
 {	
-	addKnowlHelper();
+	//addKnowlHelper();
 	var question = document.getElementById("question").value; 
 	if(question == "") 
 	{
 		alert("Ooops! You left the question blank. Please try again"); 
 	} 
+	question = checkDollarSigns("question");//calls the function to check for $ in the input
 	var output = document.getElementById("outputQues"); 
-	output.innerHTML = "You asked : " +question; 
+	output.innerHTML = "You asked : " + question; 
 }
 
 function sendAnswer() 
@@ -91,6 +85,7 @@ function sendAnswer()
 function sendSolution() 
 {
 	var solution = document.getElementById("solution").value; 
+	solution = checkDollarSigns("solution");
 	var output = document.getElementById("outputSolution"); 
 	output.innerHTML = "Your solution is : "  +solution; 
 }
@@ -171,6 +166,7 @@ function generatePerl()
 	var question = document.getElementById("knowlOutput").innerHTML;
 	var answer = document.getElementById("answer").value;
 	var solution = document.getElementById("solution").value;
+	solution = checkDollarSigns("solution");
 
 	var section1 = '<br><br>DOCUMENT();\n<br>\
 	\n<br>\
@@ -187,7 +183,6 @@ function generatePerl()
 	//$answer = String("';
 	var section2_String = '$answer = String("';
 	var section2_Real ='$answer = Real("';
-
 
 	var section3 ='");\n<br>\
 	\n<br>\
@@ -223,7 +218,6 @@ function generatePerl()
 
 	 */
 
-
 	if(usingPGML(pgString)){}
 
 	else{	
@@ -255,17 +249,8 @@ function generatePerl()
 			getSelectedType());
 	}
 
-	pgString = insertInits(pgString, ['a() = 1', 'b() = 2', 'c() = 3']);
-	
-	var output = document.getElementById("codeOutput"); 
-	if(findRand(pgString) == false)
-		output.innerHTML = "All the Perl code is : <span id='code'>"  + pgString + "</span>";
-	else	
-		alert("Random tags (\"[rand]...[/rand]\") detected. Problem generation halted.");
+	var output = document.getElementById("codeOutput"); 	
 	// Save the state and make the updates in WebWorK
-
-
-	
 	saveState();
 }
 
@@ -280,16 +265,167 @@ function generatePerl()
 	WeBWorK Question Creator
 </h1> 
 </header><br>
+<!-- When clicked this button will call the function in sendProblemToWebwork.js. If you need to change the generatePerl function, do it in that file. !-->
 <div id = "codeArea">
 <fieldset>
 	<legend> Click the button to see a preview of the Perl generated for this question </legend>
-	<button onclick = "generatePerl()" >Submit <br></button>
+	<button id="submitButton" class="fillinblanks" >Submit <br></button>
 	<br> 
 	<div id="codeOutput">
 	</div>
 </div>
 
 <div id = "userInput">
+<!--Random Field-->
+<fieldset>
+        <legend> Do you want to add randomization to this problem? </legend>
+	<!-- yes/no radio buttons -->
+	<input type="radio" name="randType" value="YesRand" 
+		onclick = "showRandom()" id = "randYes">
+		<label for="randYes">Yes</label>
+	<input type="radio" name="randType" value="NoRand" checked 			onclick="hideRandom()" id = "randNo">
+		<label for="randNo">No</label><br>
+	<!-- Variable Checkboxes -->
+	<div id = "acceptRandoms" style = "display:none;">
+		<br>Check the type of randomizations you want:<br>
+		<input type="checkbox" name="randomType" id="numValue" 
+	 		value="numRand" onclick="showNumValRand()">
+			<label for="numValue">Numerical Values</label><br>
+		<input type="checkbox" name="randomType" id="trigValue" 
+			value="trigRand" onclick="showTrigRand()">
+			<label for="trigValue">Trigometric Functions</label><br>
+		<input type="checkbox" name="randomType" id="reOpValue" 
+			value="ReRand" onclick="showReOpRand()">
+			<label for ="reOpValue">Relational Operator</label><br>
+	</div>
+	<!-- Numerical Value Section -->
+	<div id = "randNumValues" style = display:none;">
+	<table id = "numTable">
+		<tr id = "numRow">
+		<td>
+		<br>Enter the range in which the random numbers should be 				pulled from.<br>
+		<div class = "tooltip">
+			<span class = "tooltiptext">Enter the lowest number in 					the range</span>
+			<textarea name = "randRangeStart" placeholder = "Start" 					rows = "1" cols = "15"></textarea>
+		</div>
+		<div class = "tooltip">
+			<span class = "tooltiptext">Enter the highest number in 				the range</span>
+			<textarea name = "randRangeEnd" placeholder = "End" rows = 					"1" cols = "15"></textarea> 
+		</div>
+		<br>
+		<div class="tooltip">
+			Enter the value you would like to increment the 					randomization by.<br>
+			<span class = "tooltiptext">For example: in a range of 					(1,5) with an increment value of 0.5, you could 				get randomized values such as 1, 1.5, 2, 2.5, 					etc. The default value is 1.</span>
+			<textarea name="randIncrement" placeholder="Increments" 				rows = "1" cols = "30">1</textarea><br>
+		</div>
+		<br>
+		<div class="tooltip">
+			<span class = "tooltiptext">Add another random 
+				numerical value.</span>
+			<button class="button" 
+				onclick="addNewRow('numTable','numRow')">
+				+</button>
+		</div>
+		<div class="tooltip">
+			<span class = "tooltiptext">Remove the most recently 					added random numerical value.</span>
+			<button class="button" 
+				onclick="deleteLastRow('numTable')">
+				-</button>
+		</div>
+		</td>
+		</tr>
+	</table>
+	</div>
+	<!-- Trigometric Section -->
+	<div id = "randTrig" style = display:none;">
+	<br>Check the trig variables you would like to have randomized.
+	<table id = "trigTable">
+		<tr id = "trigRow">
+		<td><br>
+		<input type="checkbox" name="trigType"
+			value="sin" id="sinRand" checked>
+			<label for="sinRand">Sin </label>
+		<input type="checkbox" name="trigType"
+			value="cos" id="cosRand" checked>
+			<label for="cosRand">Cos </label>
+		<input type="checkbox" name="trigType"
+			value="tan" id="tanRand" checked>
+			<label for="tanRand">Tan </label><br> 
+		<input type="checkbox" name="trigType"
+			value="csc" id="cscRand">
+			<label for="cscRand">Csc </label>
+		<input type="checkbox" name="trigType"
+			value="sec" id="secRand">
+			<label for="secRand">Sec </label>
+		<input type="checkbox" name="trigType"
+			value="cot" id="cotRand">
+			<label for="cotRand">Cot </label><br><br>
+
+		<div class="tooltip">
+			<span class = "tooltiptext">Add another random 
+				trig variable.</span>
+			<button class="button" 
+				onclick="addNewRow('trigTable','trigRow')">
+				+</button>
+		</div>
+		<div class="tooltip">
+			<span class = "tooltiptext">Remove the most recently 					added random trig variable.</span>
+			<button class="button" 
+				onclick="deleteLastRow('trigTable')">
+				-</button>
+		</div>
+		</td>
+		</tr>
+	</table>
+	</div>
+	<!-- Relational Operator Section -->
+	<div id = "randRegOp" style = display:none;">
+	<br>Choose the relational operators you would like to possibly 			have in your problem.<br>
+	<table id = "reOpTable">
+		<tr id = "reOpRow">
+		<td><br>
+		<input type="checkbox" name="roType"
+			value="<" id="lessRand">
+			<label for="lessRand">< </label>
+		<input type="checkbox" name="roType"
+			value="<=" id="lessEqRand">
+			<label for="lessRand">&#8804 </label><br>
+		<input type="checkbox" name="roType"
+			value=">" id="greatRand">
+			<label for="greatRand">> </label>
+		<input type="checkbox" name="roType"
+			value=">=" id="greatEqRand">
+			<label for="greatEqRand">&#8805 </label><br>
+		<input type="checkbox" name="roType"
+			value="=" id="equalRand">
+			<label for="EqualRand">= </label>
+		<input type="checkbox" name="roType"
+			value="!=" id="notEqualRand">
+			<label for="notEqualRand">&#8800 </label><br><br>
+		<div class="tooltip">
+			<span class = "tooltiptext">Add another random 
+				relational operator.</span>
+			<button class="button" 
+				onclick="addNewRow('reOpTable','reOpRow')">
+				+</button>
+		</div>
+		<div class="tooltip">
+			<span class = "tooltiptext">Remove the most recently 					added random relational operator.</span>
+			<button class="button" 
+				onclick="deleteLastRow('reOpTable')">
+				-</button><br>
+		</div>
+		</td>
+		</tr>
+	</table>
+	</div>
+	<div id = "finalRandField" style = "display:none;">
+		<br><button class = "button"
+			onclick = "createRandomOutput()">Finish</button>
+		<br>
+		<div id = "randomResults"></div>
+	</div>
+</fieldset>
 <fieldset> 
 	<legend> Please type the question below : </legend> 
 	<p> <textarea id ="question" class="DuqWorkSave" rows="5" cols="50"></textarea><br>
@@ -313,78 +449,87 @@ function generatePerl()
 <fieldset>
         <legend> Do you want to include a tolerance value? </legend>
 	<div class="tooltip">
-		<span class="tooltiptext">This will allow you to set a tolerance value of "none", "numeric", or "percentage".</span>
+		<span class="tooltiptext">This will allow you to set a tolerance value of "none", "numeric", or "percentage”.</span>
 		<div>
-			<input type="radio" name="tolType" onclick = "sendTolerance(this.value)" value="none" checked>
+			<input id="noTolerance" class="DuqWorkSave" type="radio" name="tolType" onclick = "sendTolerance(this.value)" value="none" checked>
 			<label for="tolNone">No Tolerance </label><br>
 		</div>
 		<div>
-			<input type="radio" name="tolType" onclick = "sendTolerance(this.value)" value="num">
+			<input id="numericTolerance" class="DuqWorkSave" type="radio" name="tolType" onclick = "sendTolerance(this.value)" value="num">
 			<label for="tolNumeric">Numeric Value </label>
 		</div>
 		<div>
-			<input type="radio" name="tolType" onclick = "sendTolerance(this.value)" value="perc">
+			<input id="percentTolerance" class="DuqWorkSave" type="radio" name="tolType" onclick = "sendTolerance(this.value)" value="perc">
 			<label for="tolPercent">Percentage </label>
 		</div>
 		<p>If you want a tolerance, enter a value below.  If not, leave it blank!</p>
 		<p>Note: If you want a percentage, enter the number as a decimal (i.e. 15% -> 0.15)</p>
-        	<textarea id ="toleranceText" rows = "1" cols = "50"></textarea>
-        	<br>
+	        <textarea id ="toleranceText" class="DuqWorkSave" rows = "1" cols = "50"></textarea>
+		<br>
 	</div>
+        <br>
 	<div class="tooltip">
 		<span class="tooltiptext">This will submit the tolerance you wish to have.</span>
-        	<button class = "button" onclick = "sendTolerance(getSelectedType())">Submit <br></button>
-        	<div id = "outputTolerance"></div>
+	        <button class = "button" onclick = "sendTolerance(getSelectedType())">Submit <br></button>
+	        <div id = "outputTolerance"></div>
 	</div>
 </fieldset>
 
 <fieldset> 
-	<legend> Enter an explanation of the solution below: </legend>
+	<legend> Enter an explanation of the solution below: </legend> 
 	<div class="tooltip">
 		<span class="tooltiptext">This is what the student will see for a solution</span>
 		<p> <textarea id ="solution" class="DuqWorkSave" rows="5" cols="50"></textarea><br>
 	</div>
+	<br>
 	<div class="tooltip">
 		<span class="tooltiptext">This will submit the solution.</span>
 		<button onclick = "sendSolution()" >Submit <br></button> 
 		<p> Solution Preview </p>
 		<div id = "outputSolution"> 
+		</div>
 	</div>
 </fieldset> 
 
-<title> Knowls Creator </title>
+<title> Knowl Creator </title>
 <fieldset>
-    <legend>Knowls Creator:</legend>
-    
- Knowl keyword <br>
+    <legend>Knowl Creator/Searcher:</legend>
+		<p><small>*Use @ as separator for multiple knowl keyword, content, and search fields</small></p> 
+ Knowl creation keyword:<br>
   <textarea id="theWord" class="DuqWorkSave" rows="1" cols="20"></textarea><br>
- Knowl Content: <br>
-  <textarea id="theDef" class="DuqWorkSave" rows="4" cols="50"></textarea><br> 
+ Knowl creation content:<br>
+  <textarea id="theDef" class="DuqWorkSave" rows="4" cols="50"></textarea><br><br>
+ Knowl search keyword:<br>
+  <textarea id="theSearch" class="DuqWorkSave" rows="1" cols="20"></textarea><br><br>
+  <button onclick="addKnowlHelper()"> Add a knowl!</button><br>
+		<p><small>*Use \\(math\\) or \\[displaymath\\] for Latex Expression<br>
+		*For example: \\(sin(x)\\)</small></p>
 </fieldset>
 
 <!--HINT FIELD-->
 <fieldset>
         <legend> Enter a hint below: </legend>
+
         <p>Enter text here:</p>
 	<div class="tooltip">
         	<span class="tooltiptext">This is what the student will see when they click on "Need Help".</span>
-		<textarea id ="hintText" class="DuqWorkSave" rows = "5" cols = "50"></textarea>
+	        <textarea id ="hintText" class="DuqWorkSave" rows = "5" cols = "50"></textarea>
 	</div>
         <br>
+
         <p>Enter a URL for an externally hosted image here:<br>(Default size is 500x500)</p>
 	<div class="tooltip">
 		<span class="tooltiptext">This is the image that will appear when the student clicks on "Need Help".</span>
-	        <textarea id ="imageHintText" class="DuqWorkSave" rows = "5" cols = "50"></textarea>
-       		<textarea id = "imageHintWidth" class="DuqWorkSave" placeholder = "width" rows = "1" cols = "7"></textarea>
-       		<textarea id = "imageHintHeight" class="DuqWorkSave" placeholder = "height" rows = "1" cols = "7"></textarea>
+		<textarea id ="imageHintText" class="DuqWorkSave" rows = "5" cols = "50"></textarea>
+	        <textarea id = "imageHintWidth" class="DuqWorkSave" placeholder = "width" rows = "1" cols = "7"></textarea>
+	        <textarea id = "imageHintHeight" class="DuqWorkSave" placeholder = "height" rows = "1" cols = "7"></textarea>
 	</div>
-	<br>
+        <br>
 	<div class="tooltip">
 		<span class="tooltiptext">This will allow you to preview the hint.</span>
 	        <button class = "button" onclick = "sendHint()">Hint preview</button>
-	</div>
-        <p> Hint Preview </p>
-        <div id = "outputHint">
+	        <p> Hint Preview </p>
+		<div id = "outputHint"></div>
         </div>
 </fieldset>
 
@@ -396,20 +541,31 @@ function generatePerl()
         </legend>
 	<div class="tooltip">
 		<span class="tooltiptext">This is the image that the student will see inside of the problem. Height and width are represented in pixels.</span>
-        	<textarea id ="imageText" class="DuqWorkSave" rows = "5" cols = "50"></textarea>
-        	<textarea id = "imageWidth" class="DuqWorkSave" placeholder = "width" rows = "1" cols = "7"></textarea>
-        	<textarea id = "imageHeight" class="DuqWorkSave" placeholder = "height" rows = "1" cols = "7"></textarea>
+	        <textarea id ="imageText" class="DuqWorkSave" rows = "5" cols = "50"></textarea>
+	        <textarea id = "imageWidth" class="DuqWorkSave" placeholder = "width" rows = "1" cols = "7"></textarea>
+	        <textarea id = "imageHeight" class="DuqWorkSave" placeholder = "height" rows = "1" cols = "7"></textarea>
 	</div>
-        <br>
+	<br>
 	<div class="tooltip">
 		<span class="tooltiptext">This will allow you to preview the image.</span>
 	        <button class = "button" onclick = "sendImage()">Image preview</button>
-	</div>
-	<p> Image Preview </p>
-        <div id = "outputImage">
+	        <p> Image Preview </p>
+		<div id = "outputImage"></div>
         </div>
 </fieldset>
 
 </div>
 </body>
+
+<script type="text/javascript" src="../js/jquery.js"></script>
+<script type="text/javascript" src="../js/vendor/codemirror/codemirror.js"></script>
+
+<script type="text/javascript" src="js/randomProblems.js"></script>
+<script type="text/javascript" src="js/insertKnowl.js"></script>
+<script type="text/javascript" src="js/ProblemEditing.js"></script>
+<script type="text/javascript" src="js/HintEditor.js"></script> 
+<script type="text/javascript" src="js/toleranceEditor.js"></script>
+<script type="text/javascript" src="js/sendProblemToWebwork.js"></script>
+<script type="text/javascript" src="js/problemSyntaxSimplification.js"></script>
+
 </html>
